--- a/core/templates/core/partials/dna/reader_type_card.html
+++ b/core/templates/core/partials/dna/reader_type_card.html
@@ -1,5 +1,5 @@
 {% if dna.reader_type %}
-    <div class="bg-brand-purple border-brand-text shadow-neo border-2 p-6 text-center">
+    <div class="bg-brand-purple border-brand-text shadow-neo border-2 p-4 text-center sm:p-6">
         <div class="text-lg uppercase">{{ owner_pos|default:"Your" }} Reader Type is...</div>
         <div class="mt-1 text-5xl font-bold tracking-widest uppercase">{{ dna.reader_type }}</div>
         {% if dna.reader_type_explanation %}
@@ -7,4 +7,3 @@
         {% endif %}
     </div>
 {% endif %}
-
